# Battleship

./: CMakeLists.txt  Doxyfile
.github/workflows/: docs.yml  linting.yml
docs/html/: _a_i_8h_source.html  abstract__game_8h_source.html  annotated.html  battleshipgame_8h_source.html  class_battleship_1_1_a_i-members.html  class_battleship_1_1_a_i.html  class_battleship_1_1_battleship_game-members.html  class_battleship_1_1_battleship_game.html  class_battleship_1_1_database-members.html  class_battleship_1_1_database.html  class_battleship_1_1_map-members.html  class_battleship_1_1_map.html  class_battleship_1_1_player-members.html  class_battleship_1_1_player.html  class_battleship_1_1_ship-members.html  class_battleship_1_1_ship.html  class_connect_to_game_dialog-members.html  class_connect_to_game_dialog.html  class_field_widget-members.html  class_field_widget.html  class_host_game_dialog-members.html  class_host_game_dialog.html  class_main_window-members.html  class_main_window.html  class_scoreboard_window-members.html  class_scoreboard_window.html  classes.html  connecttogamedialog_8h_source.html  coordinate_8h_source.html  database_8h_source.html  dir_0abdee562046be6f5823d1ca8c3fd13c.html  dir_15ee3453266f0635c99a03d4d8109dd6.html  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_18fd539062cd3a2de3dfd78991cf728d.html  dir_241efb3acef7ce72a08720b35ee5c23d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_f584182df4c69fab0b14563b4d535158.html  enumerations_8h_source.html  fieldwidget_8h_source.html  files.html  (+24 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  searchdata.js
docs/latex/: annotated.tex  class_battleship_1_1_a_i.tex  class_battleship_1_1_battleship_game.eps  class_battleship_1_1_battleship_game.tex  class_battleship_1_1_database.tex  class_battleship_1_1_map.tex  class_battleship_1_1_player.tex  class_battleship_1_1_ship.tex  class_connect_to_game_dialog.eps  class_connect_to_game_dialog.tex  class_field_widget.eps  class_field_widget.tex  class_host_game_dialog.eps  class_host_game_dialog.tex  class_main_window.tex  class_scoreboard_window.eps  class_scoreboard_window.tex  hierarchy.tex  refman.tex  struct_battleship_1_1_abstract_battleship_game.eps  struct_battleship_1_1_abstract_battleship_game.tex  struct_battleship_1_1_coordinate.tex  struct_interfaces_1_1_i_map_scanner.eps  struct_interfaces_1_1_i_map_scanner.tex  struct_interfaces_1_1_i_mapper.eps  struct_interfaces_1_1_i_mapper.tex  struct_interfaces_1_1_i_termination_checker.eps  struct_interfaces_1_1_i_termination_checker.tex  struct_interfaces_1_1_i_turn_registrar.eps  struct_interfaces_1_1_i_turn_registrar.tex  struct_player_u_i.tex
src/: CMakeLists.txt  main.cpp
src/db/: CMakeLists.txt  database.cpp  database.h  database_test.cpp
src/game/: generic_interfaces.h  network.h
src/game/battleship/: CMakeLists.txt  abstract_game.h  battleshipgame.cpp  battleshipgame.h  battleshipgame_test.cpp  coordinate.cpp  coordinate.h  enumerations.h  map.cpp  map.h  map_test.cpp  player.cpp  player.h  player_test.cpp  ship.cpp  ship.h  ship_test.cpp
src/game/battleship/AI/: AI.cpp  AI.h  AI_test.cpp
src/network/: CMakeLists.txt  server_wrapper.cpp  server_wrapper.h  server_wrapper_test.cpp  utils.cpp  utils.h
src/widgets/: fieldwidget.cpp  fieldwidget.h
src/windows/: connecttogamedialog.cpp  connecttogamedialog.h  connecttogamedialog.ui  hostgamedialog.cpp  hostgamedialog.h  hostgamedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  scoreboardwindow.cpp  scoreboardwindow.h  scoreboardwindow.ui
