include_directories(.)
add_executable(battleship
                main.cpp
                game/generic_interfaces.h
                game/battleship/abstract_game.h
                game/battleship/enumerations.h
                widgets/fieldwidget.h
                widgets/fieldwidget.cpp
                windows/mainwindow.h
                windows/mainwindow.cpp
                windows/mainwindow.ui
                db/database.h
                db/database.cpp)
target_link_libraries(battleship
        Qt::Core
        Qt::Gui
        Qt::Widgets
        Qt::Sql
)
add_subdirectory(db)
add_subdirectory(game)
add_subdirectory(widgets)
add_subdirectory(windows)
