include_directories(.)
add_executable(battleship
                main.cpp
                game/generic_interfaces.h
                game/battleship/abstract_game.h
                game/battleship/enumerations.h
                game/battleship/battleshipgame.cpp
                game/battleship/map.cpp
                game/battleship/ship.cpp
                game/battleship/player.cpp
                widgets/fieldwidget.h
                widgets/fieldwidget.cpp
                windows/mainwindow.h
                windows/mainwindow.cpp
                windows/mainwindow.ui
                windows/scoreboardwindow.cpp
                windows/scoreboardwindow.h
                windows/scoreboardwindow.ui
                windows/hostgamedialog.cpp
                windows/hostgamedialog.h
                windows/hostgamedialog.ui
                network/server_wrapper.h
                network/server_wrapper.cpp
                db/database.h
                db/database.cpp)
target_link_libraries(battleship
        Qt::Core
        Qt::Gui
        Qt::Widgets
        Qt::Network
        Qt::Sql
        rpc
)
add_subdirectory(db)
add_subdirectory(game)
add_subdirectory(network)
add_subdirectory(widgets)
add_subdirectory(windows)
